k8s/apps/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: understand-the-wire
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: ghcr.io/alonkopilov/understand-the-wire-client-prod:20260910-125403 # {"$imagepolicy": "flux-system:client-imagepolicy"}
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 40m
