k8s/apps/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: understand-the-wire
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
